cropping css fixed

--- a/imports/ui/components/uploader/uploader.scss
+++ b/imports/ui/components/uploader/uploader.scss
@@ -19,7 +19,7 @@ image-uploader {
     }
   }
   .ng-crop-container {
-    width: 400px;
+    width: 300px;
     height: 225px;
   }
 
